<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/quantidade_de_jogadores" />

    <RadioGroup
        android:id="@+id/opcaoRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="350dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/dois_participantes"/>

        <RadioButton
            android:layout_width="350dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:text="@string/tres_participantes"/>

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/escolha_quantas_rodadas" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/umCb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/um" />

    <CheckBox
        android:id="@+id/tresCb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/tres" />

    <CheckBox
        android:id="@+id/cincoCb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cinco" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_sua_jogada" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageButton
        android:id="@+id/pedraBt"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        android:src="@mipmap/zero"
        android:text="@string/pedra" />

    <ImageButton
        android:id="@+id/papelBt"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        android:src="@mipmap/five"
        android:text="@string/papel" />

    <ImageButton
         android:id="@+id/tesouraoBt"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_weight="1"
         android:onClick="onClick"
         android:scaleType="fitCenter"
         android:src="@mipmap/two"
         android:text="@string/tesoura" />


</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_do_computador" />

    <ImageView
        android:id="@+id/jogadaComputadorIv"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/resultadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>